--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<input type="file" name="pdf" id="pdf" accept=".pdf">
 			<button type="submit">Convert</button>
 		</form>
-		<input type="checkbox" id="multiple-pages" checked>
+		<input type="checkbox" id="multiple-tabs" checked>
 		<label for="multiple-tabs">Open Multiple Tabs</label>
 		<button id="try-again">Try Again</button>
 		<div id="download-buttons"></div>
