--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<input type="checkbox" id="multiple-tabs" checked>
 		<label for="multiple-tabs">Open Multiple Tabs</label>
 		<button id="try-again">Try Again</button>
+		<div id="debug-text"></div>
 		<div id="download-buttons"></div>
 	</div>
 	<script src="script.js"></script>
